[package]
name = "transform-normalize-timestamps"
version = "0.1.0"
authors = ["aRustyDev <36318507+aRustyDev@users.noreply.github.com>"]
description = "A pilot project for a Fluvio Smartmodule"
license = "MIT/Apache-2.0"
repository = "https://github.com/arustydev/fluvio-smartmodules/transform-normalize-timestamps"
edition = "2024"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.41"
lazy_static = "1.5.0"
regex = "1.11.1"

[dev-dependencies]
regex-automata = "0.4.9"
regex-syntax = "0.8.5"


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
